cilium-cli/connectivity/manifests/echo-ingress-mtls.yaml

apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: auth-ingress
  namespace: cilium-test
spec:
  description: "Allow other client to contact echo after mTLS"
  endpointSelector:
    matchLabels:
      kind: echo
  ingress:
    - fromEndpoints:
        - matchLabels:
            kind: client
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
      auth:
        type: mtls-spiffe
